# mudyla

./: .envrc  .gitignore  .project-zsh  README.md  TESTING.md  flake.nix  pyproject.toml  run-tests.sh  test.sh  todo.md
.github/workflows/: ci.yml  test.yml
.mdl/: runtime.py
.mdl/defs/: build-pipeline-demo.md  dep-test.md  multi-context-tests.md  platform-test.md  python-test.md  soft-dep-test.md  test-actions.md  weak-dep-test.md
completions/: _mdl  init.sh  init.zsh  mdl.bash
debug/: diagnose-colors.sh  test-context-colors.sh
docs/: README.md  example.md  getting-started.md  installation.md
docs/advanced/: ci-cd.md  nix-integration.md
docs/concepts/: actions.md  context-and-axes.md  dependencies.md  variables.md  wildcards.md
docs/drafts/: 20251120-final-spec.md  20251120-uv-migration.md  20251121-completion-integration.md  20251121-sys-vars.md  20251124-test-status.md  20251124-wildcard-feature-summary.md  20251127-feature-guide.md
docs/initial-spec/: example.md  (+1 more)
extended-tests/: array-args.md  test.md
mudyla/: axis_wildcards.py  cli.py  cli_args.py  cli_builder.py  runtime.py  runtime.sh
smudyla/: .mdl  README.md  e2e-test.sh  runtime.sh  test.sh
tests/: conftest.py  test_action_logger.py  test_axis_wildcards.py  test_cli_args.py  test_cli_parser_structure.py  test_markdown_parser_arguments.py  test_markdown_parser_conditions.py  test_markdown_parser_locations.py  test_markdown_parser_properties.py  test_project_root.py  test_runtime_registry.py  test_soft_dependencies.py  test_task_table.py  test_truncate_dirname.py  test_weak_dependencies.py  test_wildcard_integration.py
(+68 files in other folders)
